--- a/templates/post/write.html
+++ b/templates/post/write.html
@@ -85,7 +85,6 @@
                         </div>
                         {% else %}
                         <div class="post-input">
-                            <label for="radio" id="radio-label">Type: </label>
                             <div class="radio-options">
                                 <div class="radio-option">
                                     <input type="radio" name="type" value="DE" id="decleration" autocomplete="off" checked>
@@ -95,23 +94,27 @@
                                     <input type="radio" name="type" value="TH" id="theory" autocomplete="off">
                                     <label for="theory">Theory</label><br>     
                                 </div>
+                                <div class="radio-option">
+                                    <input type="radio" name="type" value="QU" id="question" autocomplete="off">
+                                    <label for="question">Question</label><br>     
+                                </div>
                             </div>
                         </div>
                         {% endif %}
                         <div class="post-input">
                             <label for="title" class="char-label">Title: </label>
-                            <input type="text" name="title" id="title" autocomplete="off" placeholder="e.g. Cats are better than dogs" value="{{ draft.draft_title }}">
                             <label for="title" class="char-mobile-label">Title</label>
+                            <input type="text" name="title" id="title" autocomplete="off" placeholder="e.g. Cats are better than dogs" value="{{ draft.draft_title }}">
                         </div>
                         <div class="post-input" id="post-input-text">
                             <label for="text" class="char-label">Text: </label>
-                            <textarea name="text" id="text" maxlength="3000" autocomplete="off" placeholder="e.g. Let's be real, in the context of modern society, cats are better than dogs. The only question is by how much...">{{ draft.draft_desc|linebreaksbr }}</textarea>
                             <label for="text" class="char-mobile-label">Text</label>
+                            <textarea name="text" id="text" maxlength="3000" autocomplete="off" placeholder="e.g. Let's be real, in the context of modern society, cats are better than dogs. The only question is by how much...">{{ draft.draft_desc|linebreaksbr }}</textarea>
                         </div>
                         <div class="post-input">
                             <label for="tags" class="char-label">Tags: </label>
-                            <input type="text" name="tags" id="tags" autocomplete="off" placeholder="e.g. #cats, #dogs, #debate" value="{{ draft.draft_tags }}">
                             <label for="tags" class="char-mobile-label">Tags</label>
+                            <input type="text" name="tags" id="tags" autocomplete="off" placeholder="e.g. #cats, #dogs, #debate" value="{{ draft.draft_tags }}">
                         </div>
                     </div>
                     <div class="mobile-bottom">
