--- a/static/styles/comm.css
+++ b/static/styles/comm.css
@@ -159,12 +159,16 @@ sup {
     font-size: 100px;
 }
 
-.post-title-de {
+.post-title-DE {
     box-shadow: inset 0 -44px 0 #F28500;
 }
 
-.post-title-th {
+.post-title-TH {
     box-shadow: inset 0 -44px 0 #30f200;
+}
+
+.post-title-QU {
+    box-shadow: inset 0 -44px 0 #7f24ff;
 }
 
 .content-author {
@@ -261,20 +265,28 @@ sup {
     padding: 15px;
 }
 
-.header-shadow-de {
+.header-shadow-DE {
     box-shadow: inset 0 -10px 0 #F28500;
 }
 
-.header-shadow-th {
-    box-shadow: inset 0 -10px 0 #F28500;
+.header-shadow-TH {
+    box-shadow: inset 0 -10px 0 #30f200;
 }
 
-.mobile-header-shadow-de {
+.header-shadow-QU {
+    box-shadow: inset 0 -10px 0 #7f24ff;
+}
+
+.mobile-header-shadow-DE {
     box-shadow: inset 0 -8px 0 #F28500;
 }
 
-.mobile-header-shadow-th {
+.mobile-header-shadow-TH {
     box-shadow: inset 0 -8px 0 #30f200;
+}
+
+.mobile-header-shadow-QU {
+    box-shadow: inset 0 -8px 0 #7f24ff;
 }
 
 .chat {
@@ -1225,12 +1237,16 @@ input:focus:-ms-input-placeholder {
         font-size: 36px;
     }
 
-    .post-title-de {
+    .post-title-DE {
         box-shadow: inset 0 -17px 0 #F28500;
     }
 
-    .post-title-th {
+    .post-title-TH {
         box-shadow: inset 0 -17px 0 #30f200;
+    }
+
+    .post-title-QU {
+        box-shadow: inset 0 -17px 0 #7f24ff;
     }
 
     .content-author {
@@ -1265,12 +1281,16 @@ input:focus:-ms-input-placeholder {
         text-align: center;
     }
 
-    .mobile-header-shadow-de {
+    .mobile-header-shadow-DE {
         box-shadow: inset 0 -8px 0 #F28500;
     }
 
-    .mobile-header-shadow-th {
+    .mobile-header-shadow-TH {
         box-shadow: inset 0 -8px 0 #30f200;
+    }
+
+    .mobile-header-shadow-QU {
+        box-shadow: inset 0 -8px 0 #7f24ff;
     }
 
     .author-shadow-OR {
