--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -283,12 +283,16 @@ input:focus:-ms-input-placeholder {
     padding: 10px 15px 10px 15px;
 }
 
-.post-title-de {
+.post-title-DE {
     box-shadow: inset 0 -14px 0 #F28500;
 }
 
-.post-title-th {
+.post-title-TH {
     box-shadow: inset 0 -12px 0 #30f200;
+}
+
+.post-title-QU {
+    box-shadow: inset 0 -12px 0 #7f24ff;
 }
 
 .post-bar {
@@ -596,12 +600,20 @@ input:focus:-ms-input-placeholder {
     box-shadow: inset 0 -1vw 0 #30f200;
 }
 
+.QU-shadow-history {
+    box-shadow: inset 0 -1vw 0 #7f24ff;
+}
+
 .DE-shadow-watchlist {
     box-shadow: inset 0 -0.6vw 0 #F28500;
 }
 
-.TH-shadow-watchlist {
+.-shadow-watchlist {
     box-shadow: inset 0 -0.6vw 0 #30f200;
+}
+
+.QU-shadow-watchlist {
+    box-shadow: inset 0 -0.6vw 0 #7f24ff;
 }
 
 .watchlist-bold {
@@ -1037,12 +1049,16 @@ input:focus:-ms-input-placeholder {
         padding: 5px 15px 0px 15px;
     }
 
-    .post-title-de {
+    .post-title-DE {
         box-shadow: inset 0 -3.8vw 0 #f28500;
     }
 
-    .post-title-th {
+    .post-title-TH {
         box-shadow: inset 0 -3.8vw 0 #30f200;
+    }
+
+    .post-title-QU {
+        box-shadow: inset 0 -3.8vw 0 #7f24ff;
     }
 
     .post-bar {
