--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -224,12 +224,21 @@ body {
 
 .radio-options {
     display: flex;
-    gap: 60px;
+    gap: 5px;
+    width: 100%;
+    background-color: #000;
+    border: 5px solid #000;
 }
 
 .radio-option {
     flex: 1;
     text-align: center;
+    background-color: white;
+}
+
+.radio-option label {
+    display: inline-block;
+    width: 100%;
 }
 
 .char-mobile-label {
@@ -262,11 +271,15 @@ body {
 }
 
 #decleration:checked + label {
-    box-shadow: inset 0 -1.5vw 0 #F28500;
+    background-color: #f28500;
 }
 
 #theory:checked + label {
-    box-shadow: inset 0 -1.5vw 0 #30f200;
+    background-color: #30f200;
+}
+
+#question:checked + label {
+    background-color: #7f24ff;
 }
 
 input::-webkit-input-placeholder {
@@ -594,12 +607,16 @@ input:focus:-ms-input-placeholder {
     color: #F28500;
 }
 
-.post-dec {
+.post-DE {
     box-shadow: inset 0 -13px 0 #F28500;
 }
 
-.post-th {
+.post-TH {
     box-shadow: inset 0 -13px 0 #30f200;
+}
+
+.post-QU {
+    box-shadow: inset 0 -13px 0 #7f24ff;
 }
 
 .post-bar {
@@ -700,19 +717,20 @@ input:focus:-ms-input-placeholder {
         width: 100%;
         align-items: center;
         justify-content: space-between;
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding-bottom: 40px;
     }
 
     .post-input {
         margin: 0;
         width: 100%;
+        padding: 0;
     }
 
     .radio-options {
+        font-size: 5vw;
         gap: 1vw;
         width: 100%;
-        border-top: 1vw solid #000;
+        border-top: none;
         border-bottom: 1vw solid #000;
         background-color: #000;
     }
@@ -722,19 +740,20 @@ input:focus:-ms-input-placeholder {
     }
 
     #title {
-        text-align: center;
         font-size: 6vw;
-        width: 100vw;
+        width: 95vw;
         margin: 0;
-        border-width: 1vw;
+        border: 1vw solid #000;
+        padding-left: 5px;
     }
 
     #tags {
-        text-align: center;
         font-size: 6vw;
-        width: 100vw;
+        width: 95vw;
         margin: 0;
-        border-width: 1vw;
+        border: 1vw solid #000;
+        padding-left: 5px;
+
     }
 
     .post-input {
@@ -753,6 +772,8 @@ input:focus:-ms-input-placeholder {
 
     .char-mobile-label {
         display: flex;
+        align-self: flex-start;
+        padding-left: 2.5vw;
     }
 
     .radio-option label {
@@ -774,6 +795,10 @@ input:focus:-ms-input-placeholder {
 
     #theory:checked + label {
         background-color: #30f200;
+    }
+
+    #question:checked + label {
+        background-color: #5934ff;
     }
 
     #post-input-text textarea {
