--- a/static/styles/profile.css
+++ b/static/styles/profile.css
@@ -1062,6 +1062,10 @@ button[type="submit"]:hover > span {
     box-shadow: inset 0 -0.6vw 0 #30f200;
 }
 
+.dashboard-shadow-QU {
+    box-shadow: inset 0 -0.6vw 0 #7f24ff;
+}
+
 .orange-color {
     background-color: #F28500;
 }
@@ -1661,6 +1665,10 @@ button[type="submit"]:hover > span {
         box-shadow: inset 0 -2.5vw 0 #F28500;
     }
 
+    .dashboard-shadow-QU {
+        box-sizing: inset 0 -2.5vw 0 #7f24ff;
+    }
+
     .dashboard-logout-button-container {
         display: flex;
         align-items: center;
@@ -1836,6 +1844,10 @@ button[type="submit"]:hover > span {
     .dashboard-shadow-DE {
         box-shadow: inset 0 -10px 0 #F28500;
     }
+
+    .dashboard-shadow-QU {
+        box-shadow: inset 0 -10px 0 #7f24ff;
+    }
 }
 
 @media only screen and (max-width: 375px) {
@@ -1867,6 +1879,10 @@ button[type="submit"]:hover > span {
 
     .dashboard-shadow-DE {
         box-shadow: inset 0 -2vw 0 #F28500;
+    }
+
+    .dashboard-shadow-QU {
+        box-shadow: inset 0 -2vw 0 #7f24ff;
     }
 }
 
