--- a/templates/post/posts.html
+++ b/templates/post/posts.html
@@ -58,9 +58,11 @@
                         <div class="post">
                             <a href="../html/comms/content.html" class="post-body">
                                 {% if post.post_type == 'DE' %}
-                                <h1 class="post-title"><span class="post-dec">Declaration:</span> {{ post.post_title }}</h1>
+                                <h1 class="post-title"><span class="post-DE">Declaration:</span> {{ post.post_title }}</h1>
                                 {% elif post.post_type == 'TH' %}
-                                <h1 class="post-title"><span class="post-th">Theory:</span> {{ post.post_title }}</h1>
+                                <h1 class="post-title"><span class="post-TH">Theory:</span> {{ post.post_title }}</h1>
+                                {% elif post.post_type == 'QU' %}
+                                <h1 class="post-title"><span class="post-QU">Question:</span> {{ post.post_title }}</h1>
                                 {% endif %} <!-- Mabye place an error here, in the event of an unexpected post value -->
                                 <div class="post-bar">
                                     <h2 class="post-author">By <span>{{ post.post_author_name }}</span></h2>
