--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -608,7 +608,7 @@ input:focus:-ms-input-placeholder {
     box-shadow: inset 0 -0.6vw 0 #F28500;
 }
 
-.-shadow-watchlist {
+.TH-shadow-watchlist {
     box-shadow: inset 0 -0.6vw 0 #30f200;
 }
 
