--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -128,6 +128,16 @@
         <div class="chat" id="chat">
             <div class="messages" id="messages-container">
                 {% for message in messages %}
+                {% if message.message_author == user %}
+                <div class="message">
+                    <div class="message-body">
+                        <div class="text">
+                            <div class="author"><span class="author-shadow-{{ message.message_author.color }}">{{ message.message_author }}</span></div>
+                            <div class="content neutral" id="msg_{{ message.message_code }}"><span class="message-tag leading-tag dislikable-excited color-{{ message.message_author.color }}">{</span><span class="message-actual-content editable">{{ message.message_content }}</span><span class="message-tag trailing-tag likable-excited color-{{ message.message_author.color }}">}</span><sup>{{ message.message_score }}</sup></div>
+                        </div>
+                    </div>
+                </div>
+                {% else %}
                 <div class="message">
                     <div class="message-body">
                         <div class="text">
@@ -136,6 +146,7 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
                 {% endfor %}
             </div>
             <button id="new-messages-alert" class="new-messages-alert hidden">
@@ -147,7 +158,7 @@
         </div>
         <div class="chatbar-container">
             <div class="chat-bar">
-                <p id="chat-input" contenteditable="true" placeholder="Type in chat..."></p><!-- CSS attributes seem a bit clunkly, try integrate the JQuery solution to contenteditable placeholders if need be -->
+                <p id="chat-input" contenteditable="true" contenteditable="plaintext-only" placeholder="Type in chat..."></p><!-- CSS attributes seem a bit clunkly, try integrate the JQuery solution to contenteditable placeholders if need be -->
                 <button id="chat-submit"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg></button>
             </div>
             <div class="typing-indicator hidden" id="typing-indicator"><span class="color-OR">bobgoodman</span> is typing...</div>
