--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -92,16 +92,15 @@
                         </div>
                         <div class="dashboard-partner-group">
                             <div class="dashboard-partner-title">
-                                <h2><span class="color-BL">{</span>The Political Cathedral<span class="color-BL">}</span></h2>
+                                <h2><span class="color-BL">{</span>Herbert's Club<span class="color-BL">}</span></h2>
                             </div>
                             <div class="dashboard-partner">
                                 <p>
                                 Are you someone who enjoys thoughtful political debate with others who share your thirst for knowledge?<br>
-                                🏛️   Then join the growing community at the Political Cathedral.🏛️<br>
-                                🗣️  an interactive place to discuss the issues that matter most with a diverse group of like-minded individuals.🗣️<br>
-                                🎉  In addition to open debate, they offer reading clubs, guest speakers and regular events 📚 focused on complex policy topics.<br><br>
-                                Join the Political Cathedral today - a new kind of digital public square for engaging in civil political debate<br>
-                                <a href="https://discord.gg/6ENtKsrsEr" class="dashboard-partner-link">https://discord.gg/6ENtKsrsEr</a>
+                                🏛️   If you need a community to let out your craziest opinions, or you just want to find some like-minded poeple, look no further!. 🏛️<br>
+                                🎉  Have fun, be civil and enjoy the ride! 🎉<br><br>
+                                Join the Herbert's Club today - a new chill kind of Discord discussion server.<br>
+                                <a href="https://discord.com/invite/y3czv7W8vr" class="dashboard-partner-link">https://discord.com/invite/y3czv7W8vr</a>
                                 </p>
                             </div>
                         </div>
