Fixing truncated content.

--- a/templates/comms/content.html
+++ b/templates/comms/content.html
@@ -96,11 +96,11 @@
     <div class="content-display">
         <div class="content-title">
             {% if post.post_type == 'DE' %}
-            <h1><span class="post-title-DE">Declaration:</span> {{post.post_title | truncatesmart:60}}</h1>
+            <h1><span class="post-title-DE">Declaration:</span> {{post.post_title}}</h1>
             {% elif post.post_type == 'TH' %}
-            <h1><span class="post-title-TH">Theory:</span> {{post.post_title | truncatesmart:60}}</h1>
+            <h1><span class="post-title-TH">Theory:</span> {{post.post_title}}</h1>
             {% elif post.post_type == 'QU' %}
-            <h1><span class="post-title-QU">Question:</span> {{post.post_title | truncatesmart:60}}</h1>
+            <h1><span class="post-title-QU">Question:</span> {{post.post_title0}}</h1>
             {% endif %}
         </div>
         <div class="content-author">
