Fixing empty question content.

--- a/templates/comms/content.html
+++ b/templates/comms/content.html
@@ -100,7 +100,7 @@
             {% elif post.post_type == 'TH' %}
             <h1><span class="post-title-TH">Theory:</span> {{post.post_title}}</h1>
             {% elif post.post_type == 'QU' %}
-            <h1><span class="post-title-QU">Question:</span> {{post.post_title0}}</h1>
+            <h1><span class="post-title-QU">Question:</span> {{post.post_title}}</h1>
             {% endif %}
         </div>
         <div class="content-author">
