--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -180,5 +180,14 @@
     {{ post.post_code|json_script:"post-code" }}
     <audio id="notif-audio" src='{% static "audio/notif.mp3" %}'></audio>
 </body>
+<script src="
+https://cdn.jsdelivr.net/npm/howler@2.2.4/dist/howler.min.js
+"></script>
+<script>
+    var notifSound = new Howl({
+      src: ['{% static "audio/notif.mp3" %}'],
+      html5: true
+    });
+</script>
 <script src="{% static 'js/comms.js' %}"></script>
 </html>
